--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .DS_Store
 UserInterfaceState.xcuserstate
 NikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/UserInterfaceState.xcuserstate
+NikoBracket/Keys.plist
