start ignoring Breakpoints file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 .DS_Store
 UserInterfaceState.xcuserstate
 NikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/UserInterfaceState.xcuserstate
-NikoBracket/Keys.plist
+NikoBracket/Keys.plistNikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
