Start ignoring Breakpoints_v2.xcbkptlist

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 UserInterfaceState.xcuserstate
 NikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/UserInterfaceState.xcuserstate
 NikoBracket/Keys.plist
+NikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
