start ignoring Breakpoints_v2.xcbkptlist

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ UserInterfaceState.xcuserstate
 NikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/UserInterfaceState.xcuserstate
 NikoBracket/Keys.plistNikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 NikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+NikoBracket.xcworkspace/xcuserdata/nikog.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
